--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,13 @@ services:
 script:
   - mkdir -p spec && bundle exec rspec spec
 
+before_script:
+  - psql -c 'create database bnb_test;' -U postgres
+
 before_install:
-- sed -i '2d' Gemfile
-- sudo apt-get update -qq
-- sudo apt-get install -qq postgresql-server-dev-9.3
+  - sed -i '2d' Gemfile
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq postgresql-server-dev-9.3
 
 rvm:
  - 2.2.3
